[package]
name = "mpd-wiim-bridge"
version = "0.1.0"
edition = "2024"
description = "Expose WiiM player metadata and controls to MPD clients"
authors = ["SpiritCroc <dev@spiritcroc.de>"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
env_logger = "0.11.10"
log = "0.4.32"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
